--- a/css/main.css
+++ b/css/main.css
@@ -1055,7 +1055,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #93ff01;
+  background: #ffa8b9;
 }
 .sidebar-nav {
   margin: 0;
